(ciao_playground) fix non-monotonic slideshow scaling
Scaling with auto scrollbars is complex. Simply calculating
clientWidth/w as scale value does not work near the ideal width/height
ratio: no scrollbar makes the slide it taller, which exceeds the
available height and again makes the scrollbar needed, and so on.

We opt here for using a thin scrollbar (see .lpdoc-slide-scroll) and
scale ignoring the scrollbar width. This looks aesthetically nicer
than any other tried solution.

Src-commit: e2bbe81f2eacc1a0b4be00353b90c7fb1317a5a1

--- a/etc/lpdoc.css
+++ b/etc/lpdoc.css
@@ -1330,6 +1330,12 @@ div.dropdown-content a:hover {
   min-height: 500px; /* (do not fix height, allow vertical scrollbar) */
   position: relative;
   padding: 0px;
-  /* transform: ... */ /* calculated dynamically */
-  transform-origin: top left;
+  /* zoom: ... */ /* calculated dynamically */
+}
+
+/* Scrollbar for slideshows (see lpdoc.js for details) */
+.lpdoc-slide-scroll {
+  scrollbar-width: thin;
+  /* NOTE: we'd really want overlay scrollbars where we can see through
+   the scrollbar track, but this is not supported directly in CSS */
 }
